syntax = "proto3";

package ai.metathings.service.identity;

message Project {
	string id = 1;
	string domain_id = 2;
	string parent_id = 3;
	bool is_domain = 4;
	bool enabled = 5;
	string name = 6;
	string description = 7;
	repeated string tags = 8;
}
