syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "domain.proto";

message CreateDomainRequest {
	google.protobuf.StringValue name = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue description = 2;
	google.protobuf.BoolValue enabled = 3;
}

message CreateDomainResponse {
	Domain domain = 1;
}
